# kapsule

./: .gitignore  Cargo.toml
src/core/: format.rs  lib.rs  util.rs
src/gui/: main.rs
